CHANGES
=======

1.0b4 (unreleased)
------------------

- longrunning.txt did not reset DEBUG_CONNECTION.

1.0b3 (2008-07-04)
------------------

- Caches are using the plain unique id as cache key now (not reversed).
- Property-Cache reuses (name, namespace) tuples hand passes out references to
  the same tuples. This leads to having only one tuple instance per (name,
  namespace).
- PropertyCache stores the properties as OOBTree.
- ChildNameCache stores the childnames as TreeSet
- Small bodies (<=10 kB) are no longer stored as blob but as plain string.
- Fix for "BadStatusLine" which occours when the DAV server closes the
  connection.

1.0b2 (2008-06-28)
------------------

- Fixed handling on transaction abort so we're not writing to the database
  during "committing" phase.
- Removed property cache invalidation during server startup since this is just
  too heavy for production use.
- `changeProperties` doesn't invalidate the resource but updates the cache
  itself.
- Removed content migration script.

1.0b1 (2008-06-27)
------------------

- Using event system in ZopeConnector to invalidate caches.
- Fixed a bug when getting NULLResources or other resources w/o etag (bug
  #4315).
- Make sure connector continues to work when the connection gets into an
  inconsistent state (bug #4109).

0.22 (2008-06-23)
-----------------

- Mock: Allowed to get the root as resource.

0.21 (2008-06-16)
-----------------

- Make sure 'NoneType' object has no attribute 'group' doesn't occur anymore.
- Make sure XML-like content can be put in a property by prefixing it. This is
  a temporary fix until it is decided what the DAV server will do in this case.
- Added a DataManager where the connector can register things to clean up on
  transaction abort.
- Sending User-Agent "zeit.connector"

0.20 (2008-06-10)
-----------------

- General code cleanup
- Explicitly reading all data from response instead of brutally closing the
  connection.