@@ -63,13 +63,15 @@ The data is gone now:
 >>> import pprint
 >>> from zeit.connector.cache import get_storage_key
 >>> pprint.pprint(sorted(
-...     get_storage_key(k) for k in property_cache._storage.keys()))
+...     get_storage_key(k) for k in property_cache._storage.keys()
+...     if property_cache.get(k)))
 ['http://xml.zeit.de/index',
  'http://xml.zeit.de/testing/',
  'resource-id',
  'yet-another-id']
 >>> pprint.pprint(
-...     sorted(get_storage_key(k) for k in child_name_cache._storage.keys()))
+...     sorted(get_storage_key(k) for k in child_name_cache._storage.keys()
+...     if property_cache.get(k)))
 ['http://xml.zeit.de/testing/',
  'resource-id',
  'yet-another-id']
